feat: Expose thumbnails via cloudfront instead of base64 encoded image
